added more media for movie pages and fixed the content for them

--- a/assets/CSS/movies.css
+++ b/assets/CSS/movies.css
@@ -5,7 +5,7 @@ body{
     min-height: 100vh;
     background-size: cover;
     margin:0px;
-    font-family: Orbitron;
+    font-family: Orbitron, Arial, Helvetica, sans-serif;
 }
 
 nav{
@@ -30,7 +30,7 @@ nav a:hover{
     background-color: rgba(255, 255, 255, 0.7);
     margin: 10px;
     padding: 10px;
-    height: 100vh;
+    min-height: 100vh;
 }
 p{
     font-family: Georgia, 'Times New Roman', Times, serif
@@ -47,8 +47,22 @@ p{
     margin-right: 20px;
 }
 
-
 .scenes{
     clear:left;
-    display:inline-flex;
+    display:flex;
+    justify-content: center;
+}
+.scenes img{
+    clear: left;
+    margin-bottom: 10px;
+    margin-right: 200px;
+}
+
+footer{
+    text-align: center;
+    padding:10px;
+    color:white;
+}
+footer a{
+    color: white;
 }
