--- a/assets/CSS/movies.css
+++ b/assets/CSS/movies.css
@@ -36,10 +36,17 @@ p{
     font-family: Georgia, 'Times New Roman', Times, serif
 }
 .mixtape{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .mixtape img{
     opacity: 0.5;
+    transition: opacity 0.5s ease-in;
+}
+audio {
+    width: 230px;
+    opacity:0.5;
     transition: opacity 0.5s ease-in;
 }
 .content img{
